@@ -56,6 +56,7 @@ NEWS
   * fixed format string bugs in mod_accesslog for SYSLOG
   * replaced fprintf with log_error_write in fastcgi debug
   * fixed mem leak in ssi expression parser (#1753), thx Take5k
+  * hide some ssl errors per default, enable them with debug.log-ssl-noise (#397)
 
 - 1.4.19 - 2008-03-10
 
